--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,3 +13,6 @@
 @import url('./header.css');
 @import url('./footer.css');
 @import url('./aside.css');
+
+/* Scroll to Top style */
+@import url('./scrolltop.css');
