--- a/src/partials/aside.html
+++ b/src/partials/aside.html
@@ -1,7 +1,7 @@
 <div class="aside-container">
-    <h2 class="aside-title">Categories:</h2>
-    <ul class="categories-list">
-      <!-- Категорії будуть додані динамічно через JavaScript -->
-    </ul>
-  </div>
-  
+  <button class="all-categories-button">All Categories</button>
+  <h2 class="aside-title" style="display: none;">CATEGORIES:</h2>
+  <ul class="categories-list">
+    <!-- Категорії будуть додані тут через JavaScript -->
+  </ul>
+</div>
