--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,11 +7,11 @@
 
 <nav class="navbar">
     <ul class="nav-list">
-        <li class="nav-list-home-item nav-bar-active">
-            <a href="./index.html" class="home">HOME</a>
+        <li class="nav-list-home-item">
+            <a href="./index.html" class="nav-link home">HOME</a>
         </li>
         <li class="nav-list-shopping-item">
-            <a href="./shoping-list.html" class="shopping-list">SHOPPING LIST
+            <a href="./shopping-list.html" class="nav-link shopping-list">SHOPPING LIST
                 <svg class="icon-shopping-list" width="14" height="20">
                     <use href="./img/sprite.svg#icon-shoping-list"></use>
                 </svg>
