--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
             <a href="./index.html" class="home">HOME</a>
         </li>
         <li class="nav-list-shopping-item">
-            <a href="./shopping-list.html" class="shopping-list">SHOPPING LIST
+            <a href="./shopping-list.html" class="shopping-list">SHOPPING LIST</a>
                 <svg class="icon-shopping-list" width="14" height="20">
                     <use href="./img/sprite.svg#icon-shoping-list"></use>
                 </svg>
