--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,4 +21,4 @@
 </nav>
 
 <!-- Підключення JavaScript файлу -->
-<script src="./js/header.js"></script>
+<script type="module" defer src="./js/header.js"></script>
