--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,7 @@
 @import url('./header.css');
 @import url('./footer.css');
 @import url('./aside.css');
+@import url('./topGames.css');
 
 /* Scroll to Top style */
 @import url('./scrolltop.css');
