--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import url('./footer.css');
 @import url('./aside.css');
 @import url('./topGames.css');
+@import url('./gamesByCategory.css');
 
 /* Scroll to Top style */
 @import url('./scrolltop.css');
