--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,7 @@
 @import url('./aside.css');
 @import url('./topGames.css');
 @import url('./gamesByCategory.css');
+@import url('./modalWindow.css');
 
 /* Scroll to Top style */
 @import url('./scrolltop.css');
