--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,6 +13,9 @@
         <li class="nav-list-shopping-item">
             <a href="./shopping-list.html" class="shopping-list">SHOPPING LIST</a>
         </li>
+        <li>
+            <img src="../img/hamburger.svg" alt="Hamburger" class="hamburger-image">
+        </li>
     </ul>
 </nav>
 
