--- a/src/css/aside.css
+++ b/src/css/aside.css
@@ -81,6 +81,12 @@ main {
   color: #F6F5EF;
 }
 
+@media screen and (max-width: 768px) {
+  .aside-container {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .aside-container {
     max-height: 500px;
