--- a/src/css/topGames.css
+++ b/src/css/topGames.css
@@ -9,12 +9,6 @@
     max-width: 100%;
 }
 
-/* Категорія має великий відступ з правого боку */
-.games {
-    margin-right: 40px;
-    /* Збільшений відступ від правої стінки */
-}
-
 .category-title {
     font-size: 24px;
     font-weight: bold;
@@ -50,7 +44,7 @@
 
 .games-category-list {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
     /* Тепер 5 карток в одному ряді */
     gap: 20px;
     list-style: none;
@@ -146,22 +140,6 @@
     color: #9e9e9e;
 }
 
-/* Адаптивні стилі для планшетів і мобільних пристроїв */
-@media (max-width: 1024px) {
-    .games-category-list {
-        grid-template-columns: repeat(3, 1fr);
-        /* На планшеті відображається 3 картки */
-    }
-}
-
-@media (max-width: 768px) {
-    .games-category-list {
-        grid-template-columns: repeat(1, 1fr);
-        /* На телефоні відображається 1 картка */
-    }
-}
-
-
 .topGamesTitle {
     color: #F6F5EF;
     margin-bottom: 10px;
@@ -169,4 +147,13 @@
 
 .titleSpan {
     color: var(--alternative-gray);
+}
+
+@media screen and (max-width: 768px) {
+    .game-category {
+        margin: 0 40px 40px;
+    }
+    .topGamesTitle {
+        margin-left: 40px;
+    }
 }
