--- a/src/css/header.css
+++ b/src/css/header.css
@@ -81,13 +81,33 @@ header {
     transform: none;
 }
 
-.hamburger-image {
+.hamburger-image,
+.shopping-list-image,
+.home-image {
     display: none;
     width: 40px;
     cursor: pointer;
 }
 
+
 /* Адаптив для мобільних пристроїв */
+@media screen and (max-width: 600px) {
+    .home,
+    .shopping-list {
+        display: none;
+    }
+
+    .home-image,
+    .shopping-list-image {
+        width: 25px;
+        display: block;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .hamburger-image {
         display: block;
