--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,9 @@
         <li class="footer-about">
           <a class="footer-menu" href="#games-section">games</a>
         </li>
-        <li><a class="footer-menu" href="#reviews-section">REVIEWS</a></li>
+        <li class="footer-about">
+          <a class="footer-menu" href="#reviews-section">REVIEWS</a>
+        </li>
       </ul>
     </div>
     <div class="footer-block">
