center footer social icons on mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -136,6 +136,11 @@
     display: none;
   }
 
+  .footer-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 /* Адаптивність для більших екранів */
