--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -122,6 +122,7 @@
   gap: 24px;
   justify-content: flex-start; /* Переміщує меню лівіше */
   flex-wrap: nowrap;
+  padding-left: 14px;
 }
 
 @media only screen and (max-width: 768px) {
