--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -72,6 +72,11 @@
   width: 50%;
   height: 50%;
   object-fit: contain; /* Це допоможе зберегти пропорції іконок */
+  transition: filter 300ms;
+}
+
+.social-icon:hover {
+  filter: invert(0.6);
 }
 
 /* Іконки соцмереж */
