fix logo path in "About" modal window

--- a/src/partials/aboutModalWindow.html
+++ b/src/partials/aboutModalWindow.html
@@ -3,7 +3,7 @@
     <div class="modal-body">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
-            <img src="../img/controller.svg" alt="" class="game-cover">
+            <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/efa526a83c1a5393c5e8ac7ee77b51ca0622c008/src/img/controller.svg" alt="" class="game-cover">
             <h2>GameVault</h2>
             <br>
             <p>We are a team of passionate developers who love games and strive to make them accessible to everyone. Our store offers a wide selection of video games for various platforms, carefully curated with our users in mind.</p>
