--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,7 +16,7 @@
           <a class="footer-menu" href="#games-section">games</a>
         </li>
         <li class="footer-about">
-          <a class="footer-menu" href="#reviews-section">REVIEWS</a>
+          <a class="footer-menu" href="javascript:void(0)" onclick="openFeedbackWindow()">FEEDBACK</a>
         </li>
       </ul>
     </div>
