Add base logic shopping list games

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@
 @import url('./topGames.css');
 @import url('./gamesByCategory.css');
 @import url('./modalWindow.css');
+@import url('./shoppingList.css');
 
 /* Scroll to Top style */
 @import url('./scrolltop.css');
