--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
           <a class="footer-menu" href="javascript:void(0)" onclick="openAboutWindow()">ABOUT</a>
         </li>
         <li class="footer-about">
-          <a class="footer-menu" href="#games-section">games</a>
+          <a class="footer-menu" href="javascript:void(0)" onclick="openReviewsWindow()">REVIEWS</a>
         </li>
         <li class="footer-about">
           <a class="footer-menu" href="javascript:void(0)" onclick="openFeedbackWindow()">FEEDBACK</a>
