--- a/src/partials/reviewsModalWindow.html
+++ b/src/partials/reviewsModalWindow.html
@@ -6,21 +6,21 @@
             <h2>Reviews</h2>
             
             <div class="review">
-                <img src="../img/reviews_user_images/review_image_1.jpg" alt="Alex M." class="avatar">
+                <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/refs/heads/main/src/img/reviews_user_images/review_image_1.jpg" alt="Alex M." class="avatar">
                 <p>This website has an amazing selection of games, and the layout is so intuitive! I was able to find exactly what I was looking for without any trouble. I’ll definitely be back for more purchases.</p>
                 <p><strong>Alex M.</strong></p>
                 <div class="stars">★★★★★</div>
             </div>
             
             <div class="review">
-                <img src="../img/reviews_user_images/review_image_2.jpg" alt="Jamie R." class="avatar">
+                <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/refs/heads/main/src/img/reviews_user_images/review_image_2.jpg" alt="Jamie R." class="avatar">
                 <p>Amazing customer support and fast delivery. The variety of games available here is fantastic, and the prices are very competitive. I highly recommend this site! Will definitely shop here again! </p>
                 <p><strong>Jamie R.</strong></p>
                 <div class="stars">★★★★☆</div>
             </div>
             
             <div class="review">
-                <img src="../img/reviews_user_images/review_image_3.jpg" alt="Taylor S." class="avatar">
+                <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/refs/heads/main/src/img/reviews_user_images/review_image_3.jpg" alt="Taylor S." class="avatar">
                 <p>I love the user-friendly interface. The categories make it easy to browse, and I even discovered some hidden gems that I hadn’t heard of before! This is now my go-to place for game shopping.</p>
                 <p><strong>Taylor S.</strong></p>
                 <div class="stars">★★★★★</div>
