--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,6 +18,9 @@
 @import url('./modalWindow.css');
 @import url('./shoppingList.css');
 
+/* login styles */
+@import url('./auth.css');
+
 /* Scroll to Top style */
 @import url('./scrolltop.css');
 
