--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,14 +9,23 @@
     <ul class="nav-list">
         <li class="nav-list-home-item">
             <a href="./index.html" class="home">HOME</a>
-            <a href="./index.html"><img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/home.svg" alt="Home" class="home-image"></a>
+            <a href="./index.html"><img
+                    src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/home.svg"
+                    alt="Home" class="home-image"></a>
         </li>
         <li class="nav-list-shopping-item">
             <a href="./shopping-list.html" class="shopping-list">SHOPPING LIST</a>
-            <a href="./shopping-list.html"><img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/empty-cart.svg" alt="Shopping List" class="shopping-list-image"></a>
+            <a href="./shopping-list.html"><img
+                    src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/empty-cart.svg"
+                    alt="Shopping List" class="shopping-list-image"></a>
+        </li>
+        <li class="nav-list-auth-item">
+            <a href="./auth.html" class="auth">LOGIN</a>
+            <a href="./auth.html"><img src="./img/login.svg" alt="Login" class="auth-image"></a>
         </li>
         <li>
-            <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/hamburger.svg" alt="Hamburger Menu" class="hamburger-image">
+            <img src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/hamburger.svg"
+                alt="Hamburger Menu" class="hamburger-image">
         </li>
     </ul>
 </nav>
