--- a/src/css/modalWindow.css
+++ b/src/css/modalWindow.css
@@ -22,7 +22,9 @@
 
 .modal-body {
     min-height: 100%;
+    max-height: 90vh;
     display: flex;
+    overflow-y: auto;
     align-items: center;
     justify-content: center;
 }
