--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -1,51 +1,102 @@
 .shopping-list-title-container {
-    text-align: left;
-    margin-left: 40px;
-    margin-top: 20px;
-  }
-  
-  .shopping-list-title {
-    font-size: 36px;
-    color: #BEC7C2;
-  }
-  
-  .shopping-list-title .highlight {
-    color: #F6F5EF;
-  }
-  
-  .shopping-list-section {
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
-  }
-  
-  .shopping-list-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
-  }
-  
-  .empty-cart {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .empty-cart-image {
-    width: 200px;
-    margin-bottom: 20px;
-  }
-  
-  .empty-cart-text {
-    font-size: 18px;
-    color: #BEC7C2;
-  }
-  
-  .shopping-list-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
+  text-align: left;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+.shopping-list-title {
+  font-size: 36px;
+  color: #BEC7C2;
+}
+
+.shopping-list-title .highlight {
+  color: #F6F5EF;
+}
+
+.shopping-list-section {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.shopping-list-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
+}
+
+.empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.empty-cart-image {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
+.empty-cart-text {
+  font-size: 18px;
+  color: #BEC7C2;
+}
+
+.shopping-list-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.blur-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Затемнення */
+  backdrop-filter: blur(10px);
+  /* Заблюрення */
+  z-index: 1000;
+  /* Вище за всі елементи сторінки */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blur-overlay.hidden {
+  display: none;
+  /* Прихований стан */
+}
+
+.login-message {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.login-message p {
+  margin: 0 0 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+
+.login-message button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.login-message button:hover {
+  background-color: #0056b3;
+}
