--- a/src/css/shoppingList.css
+++ b/src/css/shoppingList.css
@@ -45,3 +45,54 @@
 .remove-button:hover {
     color: #c0392b;
 }
+
+.blur-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Затемнення */
+    backdrop-filter: blur(10px);
+    /* Заблюрення */
+    z-index: 1000;
+    /* Вище за всі елементи сторінки */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blur-overlay.hidden {
+    display: none;
+    /* Прихований стан */
+}
+
+.login-message {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.login-message p {
+    margin: 0 0 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+}
+
+.login-message button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+}
+
+.login-message button:hover {
+    background-color: #0056b3;
+}
