--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,8 +14,8 @@
                     alt="Home" class="home-image"></a>
         </li>
         <li class="nav-list-shopping-item">
-            <a href="./shopping-list.html" class="shopping-list">SHOPPING LIST</a>
-            <a href="./shopping-list.html"><img
+            <a href="/shopping-list.html" class="shopping-list">SHOPPING LIST</a>
+            <a href="/shopping-list.html"><img
                     src="https://raw.githubusercontent.com/MfD0/ProjectGGG/f4e9d92ff9e55f08335b801687d28b4ec653bce8/src/img/empty-cart.svg"
                     alt="Shopping List" class="shopping-list-image"></a>
         </li>
