--- a/src/partials/modalWindow.html
+++ b/src/partials/modalWindow.html
@@ -1,4 +1,3 @@
-<!-- Модальне вікно -->
 <div class="modal">
     <div class="modal-body">
         <div class="modal-content">
@@ -13,6 +12,7 @@
             </div>
             <button class="add-to-list">Add to shopping list</button>
             <p class="under-btn-text" style="display: none;">Already in your shopping list</p>
+            <button class="hide-card" style="display: none;">Hide this card</button>
         </div>
     </div>
 </div>
